force-app/main/default/objects/Reflection_MCC__c/Reflection_MCC__c.object-meta.xml
<CustomObject>
    <description>Created By: MCC
Business Unit: Salesforce Admin Apprenticeship 2021 (Alphaforce Team)
Purpose: To collect apprentice reflection data.</description>
    <label>Reflection MCC</label>
    <nameField>
        <displayFormat>Reflections#MCC-{000000}</displayFormat>
        <label>Reflections Number MCC</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reflections MCC</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>