force-app/main/default/objects/Reflection_MCC__c/fields/activities_projects_did_you_finish_MCC__c.field-meta.xml
<CustomField>
    <fullName>activities_projects_did_you_finish_MCC__c</fullName>
    <description>Created By: MCC
Business Unit: Salesforce Admin Apprenticeship 2021 (Alphaforce Team)
Purpose: Shows what the activities or projects the apprentice completed.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>What activities/projects did you finish?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>