force-app/main/default/objects/Reflection_MCC__c/fields/BLKR_Describe_the_blocker_solution_MCC__c.field-meta.xml
<CustomField>
    <fullName>BLKR_Describe_the_blocker_solution_MCC__c</fullName>
    <description>Created By: MCC
Business Unit: Salesforce Admin Apprenticeship 2021 (Alphaforce Team)
Purpose: This is where the apprentice will describe the solution to their blocker.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>What are the details of the solution to your blocker?</inlineHelpText>
    <label>Describe the blocker solution.</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>