force-app/main/default/objects/Reflection_MCC__c/fields/BLKR_Describe_your_blocker_MCC__c.field-meta.xml
<CustomField>
    <fullName>BLKR_Describe_your_blocker_MCC__c</fullName>
    <description>Created By: MCC
Business Unit: Salesforce Admin Apprenticeship 2021 (Alphaforce Team)
Purpose: This is where the apprentice will describe their blocker they ran into today.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>What are the details of the blocker you encountered today?</inlineHelpText>
    <label>Describe your blocker.</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>