force-app/main/default/objects/Reflection_MCC__c/fields/BLKR_Did_you_have_any_blocker_today_MCC__c.field-meta.xml
<CustomField>
    <fullName>BLKR_Did_you_have_any_blocker_today_MCC__c</fullName>
    <description>Created By: MCC
Business Unit: Salesforce Admin Apprenticeship 2021 (Alphaforce Team)
Purpose: This will indicate if the apprentice has a blocker today or not.</description>
    <label>Did you have any blocker today?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>