force-app/main/default/objects/Reflection_MCC__c/fields/BLKR_steps_resolving_your_blocker_MCC__c.field-meta.xml
<CustomField>
    <fullName>BLKR_steps_resolving_your_blocker_MCC__c</fullName>
    <description>Created By: MCC
Business Unit: Salesforce Admin Apprenticeship 2021 (Alphaforce Team)
Purpose: This will show the next steps to resolving the blocker that the apprentice is running into.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>If you haven&apos;t resolved your blocker, what are the next steps to resolving the blocker that you are running into?</inlineHelpText>
    <label>Next steps to resolving your blocker?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>