force-app/main/default/objects/Reflection_MCC__c/fields/Blocker_End_Date_Time_MCC__c.field-meta.xml
<CustomField>
    <fullName>Blocker_End_Date_Time_MCC__c</fullName>
    <description>Created By: MCC
Business Unit: Salesforce Admin Apprenticeship 2021 (Alphaforce Team)
Purpose: This shows the end time of the blocker the apprentices encountered.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>What is the end time that you worked on your blocker?</inlineHelpText>
    <label>Blocker End Date/Time</label>
    <type>DateTime</type>
</CustomField>