force-app/main/default/objects/Reflection_MCC__c/fields/Blocker_Solution_MCC__c.field-meta.xml
<CustomField>
    <fullName>Blocker_Solution_MCC__c</fullName>
    <description>Created By: MCC
Business Unit: Salesforce Admin Apprenticeship 2021 (Alphaforce Team)
Purpose: This is where the apprentice states if their solution to their blocker is resolved or not.</description>
    <inlineHelpText>Was there a solution to your blocker today?</inlineHelpText>
    <label>Blocker Solution?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>