force-app/main/default/objects/Reflection_MCC__c/fields/Blocker_Start_Date_Time_MCC__c.field-meta.xml
<CustomField>
    <fullName>Blocker_Start_Date_Time_MCC__c</fullName>
    <description>Created By: MCC
Business Unit: Salesforce Admin Apprenticeship 2021 (Alphaforce Team)
Purpose: This will show the start time of the blocker the apprentices work on today.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>What is the start time you work on your blocker?</inlineHelpText>
    <label>Blocker Start Date/Time</label>
    <type>DateTime</type>
</CustomField>