force-app/main/default/objects/Reflection_MCC__c/fields/Blocker_trail_module_and_unit_name_MCC__c.field-meta.xml
<CustomField>
    <fullName>Blocker_trail_module_and_unit_name_MCC__c</fullName>
    <description>Created By: MCC
Business Unit: Salesforce Admin Apprenticeship 2021 (Alphaforce Team)
Purpose: This states the name of trails, modules, &amp; units that the apprentice encountered during their blocker.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>What are the trails, modules, &amp; unit names of the blocker you encountered today?</inlineHelpText>
    <label>Blocker trail, module, and unit name?</label>
    <type>TextArea</type>
</CustomField>