force-app/main/default/objects/Reflection_MCC__c/fields/SB_Describe_the_speedbump_solution_MCC__c.field-meta.xml
<CustomField>
    <fullName>SB_Describe_the_speedbump_solution_MCC__c</fullName>
    <description>Created By: MCC
Business Unit: Salesforce Admin Apprenticeship 2021 (Alphaforce Team)
Purpose: This is the details of the solution the apprentice ran into during the speedbump.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>What were the details of your solution to the speedbump you ran into today?</inlineHelpText>
    <label>Describe the speedbump solution.</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>