force-app/main/default/objects/Reflection_MCC__c/fields/SB_Describe_your_speedbump_MCC__c.field-meta.xml
<CustomField>
    <fullName>SB_Describe_your_speedbump_MCC__c</fullName>
    <description>Created By: MCC
Business Unit: Salesforce Admin Apprenticeship 2021 (Alphaforce Team)
Purpose: This is the description of the speedbump the apprentice ran into.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>What are the details of the speedbump you ran into today?</inlineHelpText>
    <label>Describe your speedbump.</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>