force-app/main/default/objects/Reflection_MCC__c/fields/SB_Did_you_have_any_speedbump_today_MCC__c.field-meta.xml
<CustomField>
    <fullName>SB_Did_you_have_any_speedbump_today_MCC__c</fullName>
    <description>Created By: MCC
Business Unit: Salesforce Admin Apprenticeship 2021 (Alphaforce Team)
Purpose: Determine if the apprentice has any speedbumps for the day.</description>
    <label>Did you have any speedbump today?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>