force-app/main/default/objects/Reflection_MCC__c/fields/SB_trail_module_and_unit_name_MCC__c.field-meta.xml
<CustomField>
    <fullName>SB_trail_module_and_unit_name_MCC__c</fullName>
    <description>Created By: MCC
Business Unit: Salesforce Admin Apprenticeship 2021 (Alphaforce Team)
Purpose: Shows the name of the trail, module, and unit the apprentice had a speedbump on</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>What was the name of the trail, module, and unit of the speedbump you ran into today?</inlineHelpText>
    <label>Speedbump trail, module, and unit name?</label>
    <type>TextArea</type>
</CustomField>