force-app/main/default/objects/Reflection_MCC__c/fields/Speedbump_Start_Date_Time_MCC__c.field-meta.xml
<CustomField>
    <fullName>Speedbump_Start_Date_Time_MCC__c</fullName>
    <description>Created By: MCC
Business Unit: Salesforce Admin Apprenticeship 2021 (Alphaforce Team)
Purpose: This will show the start time of the speedbump the apprentice is working on.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>What is the start time of the speedbump?</inlineHelpText>
    <label>Speedbump Start Date/Time</label>
    <type>DateTime</type>
</CustomField>