force-app/main/default/objects/Reflection_MCC__c/fields/Today_s_Date_MCC__c.field-meta.xml
<CustomField>
    <fullName>Today_s_Date_MCC__c</fullName>
    <description>Created By: MCC
Business Unit: Salesforce Admin Apprenticeship 2021 (Alphaforce Team)
Purpose: Shows today&apos;s date which is the date the apprentice submit their reflection</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Today&apos;s Date</label>
    <type>Date</type>
</CustomField>