force-app/main/default/objects/Reflection_MCC__c/fields/What_did_you_experience_MCC__c.field-meta.xml
<CustomField>
    <fullName>What_did_you_experience_MCC__c</fullName>
    <description>Created By: MCC
Business Unit: Salesforce Admin Apprenticeship 2021 (Alphaforce Team)
Purpose: This is where apprentices will input their experience during activities or projects.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>What did you experience during activities or projects?</inlineHelpText>
    <label>What did you experience?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>