force-app/main/default/objects/Reflection_MCC__c/fields/What_do_you_need_MCC__c.field-meta.xml
<CustomField>
    <fullName>What_do_you_need_MCC__c</fullName>
    <description>Created By: MCC
Business Unit: Salesforce Admin Apprenticeship 2021 (Alphaforce Team)
Purpose: This will show what the apprentice needs as support from lead, in general, or within themselves.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>What do you need as support from your lead, in general, or within yourself?</inlineHelpText>
    <label>What do you need?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>