force-app/main/default/objects/Reflection_MCC__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>BLKR_Did_you_have_any_blocker_today_MCC__c</columns>
    <columns>SB_Did_you_have_any_speedbump_today_MCC__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>