force-app/main/default/objects/Reflection_MCC__c/listViews/Speedbump_s.listView-meta.xml
<ListView>
    <fullName>Speedbump_s</fullName>
    <columns>NAME</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>SB_Describe_your_speedbump_MCC__c</columns>
    <columns>SB_Describe_the_speedbump_solution_MCC__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SB_Did_you_have_any_speedbump_today_MCC__c</field>
        <operation>equals</operation>
        <value>Yes</value>
    </filters>
    <label>Speedbump(s)</label>
</ListView>